syntax = "proto3";
package proto;

option go_package = "https://github.com/maxamed-cali/go-microservices/proto/gen/proto";

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
}
